2000-11-14  Havoc Pennington  <hp@redhat.com>

	* gdk/gdkpango.c (gdk_draw_layout_line): Draw underlines one pixel
	higher.

	* gtk/gtktextdisplay.c (render_layout_line): Take rise into
	account. Also, render rise, underline, background, etc. for
	pixbufs as well as text. Also, draw underlines one pixel higher.

	* gtk/gtktextlayout.c (gtk_text_layout_get_line_display): Add a
	PangoAttribute for the rise, so it gets drawn properly. Also,
	add the GtkTextAppearance attribute for pixbuf/widget segments
	as well; we should go ahead and have rise, underline, background,
	stipple work for those

	* gtk/gtktexttag.c: Rename "offset" property to "rise" to match
	Pango

2000-11-15  Tor Lillqvist  <tml@iki.fi>

	* gtk/makefile.{mingw,msc}.in (gtk_OBJECTS): Add new objects.

	* gtk/gtk.def: Update.

	* gtk/gtkrc.c: Can't check for G_OS_WIN32 until glib.h has been
	included.
	(gtk_rc_get_im_module_file): Use run-time installation directory
	on Win32.

	* gdk/win32/rc/gdk.rc: Remove.
	* gdk/win32/rc/gdk.rc.in: New file.
	* gdk/win32/rc/Makefile.am: New file
	* gdk/win32/Makefile.am: Corresponding changes.

	* gtk/gtk.rc: Remove.
	* gtk/gtk-win32.rc.in: New file.
	* gtk/Makefile.am: Corresponding changes.

	* configure.in: Corresponding changes.

	* gtk/gtkcompat.h.win32: Remove, useless. A distribution already
	has a built gtkcompat.h. Developers using CVS code on Win32 can
	hand-edit it from gtkcompat.h.in.

	* gtk/makefile.{mingw,msc}.in: Correspondingly don't try to make
	gtkcompat.h from gtkcompat.h.win32.

2000-11-14  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_drag_motion): Fix drag-and-drop
	to default to GDK_ACTION_MOVE if the drag is within a single
	widget. Defaults to GDK_ACTION_COPY between widgets.

Mon Nov 13 14:43:48 2000  Owen Taylor  <otaylor@redhat.com>

	* demos/Makefile.am (test-inline-pixbufs.h): Fix srcdir != builddir

	* gtk/Makefile.am (INCLUDES): Add -I$(builddir)/gtk
