@@ -35,16 +35,16 @@ LDADDS = @STRIP_BEGIN@ 					\
 moduledir = $(libdir)/gtk-2.0/$(GTK_VERSION)/immodules
 module_LTLIBRARIES = im-cyrillic-translit.la im-xim.la im-viqr.la im-thai-broken.la
 
-im_cyrillic_translit_la_LDFLAGS = -rpath $(libdir) -export-dynamic -avoid-version -module
+im_cyrillic_translit_la_LDFLAGS = -rpath $(libdir) -avoid-version -module
 im_cyrillic_translit_la_SOURCES = imcyrillic-translit.c
 
-im_thai_broken_la_LDFLAGS = -rpath $(libdir) -export-dynamic -avoid-version -module
+im_thai_broken_la_LDFLAGS = -rpath $(libdir) -avoid-version -module
 im_thai_broken_la_SOURCES = imthai-broken.c
 
-im_viqr_la_LDFLAGS = -rpath $(libdir) -export-dynamic -avoid-version -module
+im_viqr_la_LDFLAGS = -rpath $(libdir) -avoid-version -module
 im_viqr_la_SOURCES = imviqr.c
 
-im_xim_la_LDFLAGS = -rpath $(libdir) -export-dynamic -avoid-version -module
+im_xim_la_LDFLAGS = -rpath $(libdir) -avoid-version -module
 im_xim_la_SOURCES = 		\
 	gtkimcontextxim.c 	\
 	gtkimcontextxim.h	\
